--- a/src/view/ui.fxml
+++ b/src/view/ui.fxml
@@ -1,31 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.beans.property.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.paint.Color?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" alignment="CENTER" prefWidth="300" prefHeight="300" fx:controller="controller.OcrController" xmlns:fx="http://javafx.com/fxml">
-    <fx:define>
-        <Font fx:id="FONT" size="18" />
-    </fx:define>
-    
-    
-
-    <HBox spacing="10" alignment="CENTER">
-        <Button text="TADAAA" prefWidth="200" font="$FONT" onAction="#something" />
-    </HBox>
-    
-    <StackPane alignment="CENTER">
-        <Rectangle fill="TRANSPARENT" stroke="GRAY" width="230" height="50" />
-        <Text fx:id="output" font="$FONT" />
-    </StackPane>
-    
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.OcrGUI">
+  <children>
+    <MenuBar prefWidth="640.0" VBox.vgrow="NEVER">
+      <menus>
+        <Menu mnemonicParsing="false" text="Fájl">
+          <items>
+            <MenuItem mnemonicParsing="false" onAction="#saveMenuAction" text="Mentés..." />
+            <SeparatorMenuItem mnemonicParsing="false" />
+            <MenuItem mnemonicParsing="false" onAction="#quitMenuAction" text="Kilépés" />
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Információ">
+          <items>
+            <MenuItem mnemonicParsing="false" onAction="#aboutMenuAction" text="Az alkalmazásról" />
+          </items>
+        </Menu>
+      </menus>
+    </MenuBar>
+    <AnchorPane fx:id="fullScreenButton" maxHeight="-1.0" maxWidth="-1.0" onMouseClicked="#loadFullScreen" prefHeight="295.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+         <children>
+            <GridPane layoutX="14.0" layoutY="12.0" prefHeight="348.0" prefWidth="612.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="367.0" minWidth="10.0" prefWidth="306.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.0" minWidth="10.0" prefWidth="306.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="111.0" minHeight="0.0" prefHeight="37.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="275.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="295.0" minHeight="0.0" prefHeight="31.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="295.0" minHeight="0.0" prefHeight="195.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Kép betöltése:" GridPane.valignment="CENTER" />
+                  <Label text="A következő elemek detektálása:" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <GridPane prefHeight="124.0" prefWidth="117.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <CheckBox fx:id="characterCB" mnemonicParsing="false" onAction="#enableCharacter" text="Karakterek" />
+                        <CheckBox fx:id="lineCB" mnemonicParsing="false" onAction="#enableLine" text="Sorok" GridPane.rowIndex="1" />
+                        <CheckBox fx:id="paragraphCB" mnemonicParsing="false" onAction="#enableParagraph" text="Bekezdések" GridPane.rowIndex="2" />
+                        <ColorPicker fx:id="lineColor" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ColorPicker fx:id="paragraphColor" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ColorPicker fx:id="characterColor" disable="true" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+                  <Button fx:id="runButton" mnemonicParsing="false" onAction="#run" text="Futtatás" GridPane.rowIndex="2" />
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                     <children>
+                        <Button fx:id="loadFile" mnemonicParsing="false" text="Kép betöltése" HBox.hgrow="ALWAYS" />
+                        <Label fx:id="fileLabel" prefHeight="31.0" prefWidth="149.0">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <ImageView fx:id="imageView" fitHeight="166.0" fitWidth="552.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+               </children>
+            </GridPane>
+            <Button fx:id="fullScreen" disable="true" layoutX="431.0" layoutY="334.0" mnemonicParsing="false" onAction="#loadFullScreen" opacity="0" prefHeight="40.0" prefWidth="40.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+         </children>
+    </AnchorPane>
+  </children>
 </VBox>
